# DevOps

./: Dockerfile  Makefile  Makefile.am  ShxCalculator.cpp  ShxCalculator.h  configure.ac  http_server.cpp  main.cpp  test_shx.cpp
.github/workflows/: automake.yml  build.yml  deb-package.yml  docker-multiarch.yml  docker.yml  test.yml
debian/: changelog  control  files
debian/.debhelper/shxcalculator/: dbgsym-build-ids
debian/.debhelper/shxcalculator/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/shxcalculator/dbgsym-root/usr/share/doc/: shxcalculator-dbgsym
debian/shxcalculator/DEBIAN/: control  md5sums
